<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="346dp"
        android:layout_height="393dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageText">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="175dp"
            android:layout_height="104dp"
            android:cropToPadding="true"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img25" />

        <TextView
            android:id="@+id/towerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tower"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="175dp"
            android:layout_height="104dp"
            android:cropToPadding="true"
            android:paddingBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_0299"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="175dp"
            android:layout_height="104dp"
            android:cropToPadding="true"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_0227"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="166dp"
            android:layout_height="104dp"
            android:cropToPadding="true"
            android:paddingBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_0236"
            app:layout_column="0"
            app:layout_row="4" />

        <ImageView
            android:id="@+id/image5"
            android:layout_width="175dp"
            android:layout_height="104dp"
            android:cropToPadding="true"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_0316"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/wynnLakeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="@string/wynnLake"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/lakeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lake"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/fountainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fountains"
            app:layout_column="0"
            app:layout_row="5" />

        <TextView
            android:id="@+id/dolphinsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dolphins"
            app:layout_column="1"
            app:layout_row="3" />
    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/languageText"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/language"
        app:layout_constraintBottom_toTopOf="@+id/gridlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>